--- a/packages/CMSettingsProvider/res/values/defaults.xml
+++ b/packages/CMSettingsProvider/res/values/defaults.xml
@@ -34,7 +34,7 @@
     <!-- Default for CMSettings.Secure.DEFAULT_THEME_PACKAGE -->
     <string name="def_theme_package"></string>
 
-    <!-- Defaults for CMSettings.Secure.DEV_FORCE_SHOW_NAVBAR -->
+    <!-- Defaults for CMSettings.Secure.NAVIGATION_BAR_SHOW -->
     <integer name="def_force_show_navbar">0</integer>
 
     <!-- Default for CMSettings.Secure.QS_TILES
